SUBDIRS = cdc index

proc_headers =
	$(addprefix processors/, \
	objecttx-common.h)

noinst_HEADERS = \
	unpack-trees.h \
	seaf-tree-walk.h \
	diff-simple.h \
	seafile-crypt.h \
	common.h \
	branch-mgr.h \
	fs-mgr.h \
	block-mgr.h \
	commit-mgr.h \
	log.h \
	object-list.h \
	vc-common.h \
	seaf-utils.h \
	obj-store.h \
	obj-backend.h \
	block-backend.h \
	block.h \
	mq-mgr.h \
	seaf-db.h \
	merge-new.h \
	block-tx-utils.h \
	curl-init.h \
	$(proc_headers)
